# maverage

./: .gitignore  LICENSE.txt  pyproject.toml  readme.md
src/maverage/: __init__.py  simple.py
tests/: test_simple.py
